@@ -3034,6 +3034,10 @@
 				>
 			</File>
 			<File
+				RelativePath="utf8.cpp"
+				>
+			</File>
+			<File
 				RelativePath="CProfiler.cpp"
 				>
 			</File>
